<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cis657_hw4.LocationSearchActivity"
    tools:showIn="@layout/activity_location_search">

    <TextView
        android:id="@+id/loc1"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_near_me_black_24dp"
        android:gravity="center"
        android:hint="@string/loc1_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/loc2"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_near_me_black_24dp"
        android:gravity="center"
        android:hint="@string/loc2_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loc1" />

    <TextView
        android:id="@+id/calculation_date"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:gravity="center"
        android:hint="@string/start_date_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/loc1"
        app:layout_constraintRight_toRightOf="@+id/loc1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:text="@string/loc_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:text="@string/loc_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loc2"
        android:layout_marginTop="16dp"
        />
</android.support.constraint.ConstraintLayout>